# QorVix

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.cuda  LICENSE  README.md  ROADMAP.md  docker-compose.yml  vcpkg.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
api/: CMakeLists.txt
api/include/qorvix/api/: http_server.hpp  json.hpp  openai.hpp
api/src/: http_server.cpp  json.cpp  openai.cpp
core/: CMakeLists.txt
core/include/qorvix/: dynamic_library.hpp  gpu_engine.hpp  model_info.hpp  model_registry.hpp  model_watcher.hpp  plugin.hpp  plugin_registry.hpp  ports.hpp  version.hpp
core/src/: dynamic_library.cpp  main.cpp  model_registry.cpp  model_watcher.cpp  plugin_registry.cpp  version.cpp
cuda/: CMakeLists.txt
cuda/include/qorvix/cuda/: backend.hpp  gpu_memory.hpp  gpu_model.hpp  multi_gpu.hpp
cuda/src/: cuda_backend.cu  cuda_backend_stub.cpp  tensor_parallel.cpp
docs/: BUILDING.md  COLAB.md  DOCKER.md  SPEC.md
gguf/: CMakeLists.txt
gguf/include/qorvix/gguf/: gguf_error.hpp  gguf_file.hpp  gguf_reader.hpp  gguf_types.hpp  mapped_file.hpp
gguf/src/: gguf_file.cpp  gguf_types.cpp  mapped_file.cpp
memory/: CMakeLists.txt
memory/include/qorvix/memory/: disk_allocator.hpp  kv_cache.hpp  memory_manager.hpp  page.hpp  page_pool.hpp  slab_allocator.hpp  tier.hpp  transfer.hpp
memory/src/: disk_allocator.cpp  kv_cache.cpp  memory_manager.cpp  page.cpp  page_pool.cpp  slab_allocator.cpp
models/: README.md
notebooks/: qorvix_cuda_colab.ipynb
plugins/example/: CMakeLists.txt  example_plugin.cpp
runtime/: CMakeLists.txt
runtime/include/qorvix/runtime/: dequant.hpp  generator.hpp  inference_engine.hpp  model_config.hpp  ops.hpp  qmatmul.hpp  sampler.hpp  text_model.hpp  weights.hpp
runtime/src/: dequant.cpp  generator.cpp  model_config.cpp  ops.cpp  qmatmul.cpp  sampler.cpp  text_model.cpp  weights.cpp
scheduler/: CMakeLists.txt
scheduler/include/qorvix/scheduler/: scheduler.hpp
scheduler/src/: scheduler.cpp
scripts/: colab_cuda_test.sh  colab_ncu_profile.sh
tests/: CMakeLists.txt  core_smoke_test.cpp  cuda_test.cpp  dequant_test.cpp  generator_test.cpp  gguf_builder.hpp  gguf_file_test.cpp  inference_engine_test.cpp  json_test.cpp  kv_cache_test.cpp  kv_share_test.cpp  memory_test.cpp  model_config_test.cpp  model_registry_test.cpp  model_watcher_test.cpp  openai_test.cpp  ops_test.cpp  plugin_registry_test.cpp  ports_test.cpp  qmatmul_test.cpp  sampler_test.cpp  scheduler_test.cpp  tensor_parallel_test.cpp  text_model_test.cpp  tokenizer_test.cpp  transfer_test.cpp
tokenizer/: CMakeLists.txt
tokenizer/include/qorvix/tokenizer/: tokenizer.hpp
tokenizer/src/: tokenizer.cpp
